--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "homepage": "https://github.com/BHARGAVSAI558/GITACTIONS-practice-frontend",
 
   "scripts": {
     "dev": "vite",
